<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.david.assignment_2.Skane2">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/från"
            android:id="@+id/textView5"
            android:layout_marginTop="28dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/till"
            android:id="@+id/textView6"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ändra"
            android:id="@+id/button"
            android:layout_marginEnd="31dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ändra2"
            android:id="@+id/button2"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignStart="@+id/button" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ankomst"
            android:id="@+id/radioButton"
            android:layout_marginStart="25dp"
            android:layout_marginTop="98dp"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avgång"
            android:id="@+id/radioButton2"
            android:layout_alignTop="@+id/radioButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favoriter"
            android:id="@+id/button3"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="28dp"
            android:background="#ca3339"
            android:layout_alignStart="@+id/textView6"
            android:layout_alignEnd="@+id/editText2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bevakningar"
            android:id="@+id/button4"
            android:background="#ca3339"
            android:layout_below="@+id/space"
            android:layout_alignStart="@+id/button3"
            android:layout_alignEnd="@+id/button3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tidDatum"
            android:id="@+id/textView7"
            android:layout_above="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/justnu"
            android:id="@+id/textView8"
            android:textSize="15dp"
            android:textIsSelectable="true"
            android:layout_above="@+id/textView7"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trafikslag"
            android:id="@+id/textView9"
            android:layout_marginTop="35dp"
            android:textSize="15dp"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/textView7" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_above="@+id/textView6"
            android:layout_alignEnd="@+id/button"
            android:layout_toEndOf="@+id/textView5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignEnd="@+id/button"
            android:layout_toEndOf="@+id/textView5" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_below="@+id/button3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/space" />

    </RelativeLayout>
</FrameLayout>
