<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Skane_1$PlaceholderFragment"
    android:background="#FFFFFF"

    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/tid"
        android:layout_above="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/tic"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/kal"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rese"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets"
        android:id="@+id/textView4"
        android:textSize="20dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignStart="@+id/imageView2" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/sok"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignEnd="@+id/textView3"
         />



</RelativeLayout>
